<resources>
    <string name="app_name">Notifications Collector</string>

    <!-- Side menu -->
    <string name="open_drawer_content_desc">open</string>
    <string name="close_drawer_content_desc">close</string>

    <!-- Menu -->
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_clear">Clear</string>
    <string name="menu_item_apps_settings">Apps Settings</string>

    <!-- General -->
    <string name="load_more">Load more</string>
    <string name="delete">Delete</string>
    <string name="confirm_positive">Yes</string>
    <string name="confirm_negative">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_data">No data</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="filter">Filter</string>

    <string name="clear_confirm_title">Delete notifications</string>
    <string name="clear_confirm_message">Are you sure you want to delete all notifications? This can not be undone.</string>
    <string name="notification_icon_content_description">icon</string>
    <string name="app_icon_content_description">icon</string>
    <string name="notification_log_template">%1$s\n\n%2$s\n\n%3$s</string>

    <!-- Apps settings -->
    <string name="title_activity_apps_settings">Apps Settings</string>
    <string name="title_activity_app_settings">App Settings</string>
    <string name="app_settings_enable_collecting_title">Enable collecting</string>
    <string name="app_settings_enable_collecting_description">Enable if you want to collect notifications from this app</string>
    <string name="app_settings_number_of_notifications_description">Collected %d notifications in total</string>

    <string name="app_settings_delete_app_title">Delete the app</string>
    <string name="app_settings_delete_app_description">Delete application and it\'s settings</string>
    <string name="app_settings_delete_app_alert_title">Delete application</string>
    <string name="app_settings_delete_app_alert_description">This will delete the app and it\'s settings.\n\nThis will not delete app\'s notifications.\nYou will not be able to delete notifications from this app later, so please do it before you delete the app.</string>
    <string name="app_delete_confirm_message">Deleted %1$s</string>

    <string name="app_settings_app_not_found">App not found</string>

    <!--  Delete notifications  -->
    <string name="delete_notifications_description">Here you can delete notifications. You can delete all of them or just the old ones.</string>
    <string name="delete_all_notifications_title">Delete all notifications</string>
    <string name="delete_all_notifications_btn">Delete all</string>
    <string name="delete_all_notifications_alert_title">Delete all notifications</string>
    <string name="delete_all_notifications_alert_description">Are you sure you want to delete all notifications (up to this moment)? This action can not be undone.</string>

    <string name="delete_notifications_counting_title">Preparing data</string>
    <string name="delete_notifications_counting_description">The app is preparing and counting data. Please wait a moment.\n\nDepending on number of notifications it may take a few seconds or a few minutes.</string>
    <string name="delete_notifications_nothing_to_delete_title">Nothing to delete</string>
    <string name="delete_notifications_nothing_to_delete_description">There are no notifications matching selected criteria</string>
    <string name="delete_old_notifications_alert_title">Delete selected notifications</string>
    <string name="delete_old_notifications_alert_message">This action will delete %1$d notifications. Are you sure you want to continue? This action can not be undone.</string>
    <string name="delete_old_notifications_btn">Delete selected</string>
    <string name="delete_old_notifications_title">Delete old notifications</string>
    <string name="delete_old_notifications_time_label">days</string>
    <string name="delete_old_notifications_description">Delete notifications older than</string>
    <string name="delete_old_notifications_default_value">30</string>

    <string name="delete_notifications_in_progress_notification_title">Deleting notifications!</string>
    <string name="delete_notifications_in_progress_notification_description">Deleting in progress...</string>
    <string name="delete_notifications_completed_notification_title">Deleting notifications completed!</string>
    <string name="delete_notifications_completed_notification_description">Successfully deleted %1$d notifications</string>

    <!-- Permissions -->
    <string name="permission_request_title">Permission required</string>
    <string name="permission_request_open_settings">Open settings</string>
    <string name="notification_listener_permission_request">To allow this app collecting notifications we need notification access permission. Without this the app will not be able fulfill its goal. Please enable this permission for this app in the settings.</string>

    <!-- Filter -->
    <string name="filter_view_title">Select apps</string>
    <string name="filter_show_all">Show all</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notifications">Notifications</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_delete_notifications">Delete notifications</string>
</resources>
